src/commands/snapshots/csx__commands__exec__tests__sample_event_indexer.sh.snap
---
source: src/commands/exec.rs
expression: "fs::read_to_string(component_sh_path).unwrap()"
---
#!/bin/bash
# init
dfx canister  call sample_event_indexer init_in '(variant { "LocalDevelopment" }, record {
                refueling_interval = 86400: nat64;
                vault_intial_supply = 1000000000000: nat;
                indexer = record { 
                    initial_supply = 0: nat;
                    refueling_amount = 1000000000000: nat;
                    refueling_threshold = 500000000000: nat;
                };
                db = record { 
                    initial_supply = 1500000000000: nat;
                    refueling_amount = 1000000000000: nat;
                    refueling_threshold = 500000000000: nat;
                };
                proxy = record { 
                    initial_supply = 300000000000: nat;
                    refueling_amount = 100000000000: nat;
                    refueling_threshold = 100000000000: nat;
                };
        })' --with-cycles 2800000000000 --wallet $(dfx identity get-wallet )
# setup
dfx canister  call sample_event_indexer setup "(
    \"0x6B175474E89094C44Da98b954EedeAC495271d0F\",
    record{
        env=variant{\"LocalDevelopment\"};
        url=\"https://mainnet.infura.io/v3/\";
        chain_id=1        
    },
    record{
        start_from=17660942
    }
    )"
# set_task
dfx canister  call sample_event_indexer set_task '(3600, 10)'

