src/commands/snapshots/csx__commands__exec__tests__utils.sh.snap
---
source: src/commands/exec.rs
expression: "fs::read_to_string(utils_sh_path).unwrap()"
---
#!/bin/bash

function on_error()
{
    status=$?
    script=$1
    line=$2
    command=$3

    {
        # echo "Status: $status"
        echo "occured on $script [Line $line]"
        echo "command: $command"
    } 1>&2
}

